mailbook-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailbook-api-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailbook-api
  template:
    metadata:
      labels:
        app: mailbook-api
    spec:
      containers:
      - name: mailbook-api
        image: arahk/neighbor-os-mailbook-api:latest
        imagePullPolicy: "Always"
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: mailbook-api-clusterip-srv
spec:
  type: ClusterIP
  selector:    
      app: mailbook-api
  ports:
    - name: mailbook-api
      protocol: TCP
      port: 80
      targetPort: 80
