mssql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailbook-db-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailbook-db
  template:
    metadata:
      labels:
        app: mailbook-db
    spec:
      containers:
      - name: mailbook-db
        image: mrc.microsoft.com/mssql/server:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 1433
---
apiVersion: apps/v1
kind: Service
metadata:
  name: mailbook-db-depl
spec:
  type: ClusterIP
  selector:    
      app: mailbook-db
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
