nodepod.yaml
apiVersion: v1
kind: Service
metadata:
  name: mailbook-np-api
spec:
  type: NodePort
  selector:
    app: mailbook-api
  ports:
  - name: mailbook-api
    protocol: TCP
    port: 80
    targetPort: 80
